package behavior.strategy.ck;

public interface PhuongThucKhuyenMai {
    double khuyenMai(double tongTien);
}
