package behavior.strategy.ck;

public interface PhuongThucThanhToan {
    void thanhToan(double tongTien);
}
